# strange-attractor-renderer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs
