[package]
name = "strange-attractor-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "strange-attractor-renderer"
path = "src/bin/main.rs"
required-features = ["bin"]

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "pnm", "bmp"] }
rand = { version = "0.8", features = ["small_rng"] }

# bin
clap = { version = "3", optional = true, features = ["cargo"] }
clap_autocomplete = { version = "0.1", optional = true }

[features]
default = ["bin", "complete"]
bin = ["clap"]
complete = ["clap_autocomplete"]

[profile.production]
inherits = "release"
lto = true
opt-level = "s"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
