[package]
name = "strange-attractor-renderer"
version = "0.1.0"
rust-version = "1.59"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "strange-attractor-renderer"
path = "src/bin/main.rs"
required-features = ["bin"]

[dependencies]
image = { version = "0.24", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
watch = { version = "0.2", features = ["parking_lot"] }

# bin
clap = { version = "4", optional = true, features = ["cargo"] }
clap_autocomplete = { version = "0.3", optional = true }

[features]
default = ["png", "bin", "complete"]

## Binary features

# Basic CLI functionality
bin = ["clap", "image/pnm", "image/bmp"]

png = ["image/png"]

# shell completion
complete = ["clap_autocomplete"]

[profile.production]
inherits = "release"
lto = true
opt-level = "s"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
